--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -547,13 +547,16 @@ footer {
   display: none;
 }
 .mobile_menu span {
-  background-color: #ff7f00;
-  width: 25px;
-height: 3px;
-  display: block;
-  margin-bottom: 6px;
-  opacity: 1;
-  transition: all .4s linear;
+  background-color: #484848;
+width: 25px;
+height: 2px;
+display: block;
+margin-bottom: 6px;
+opacity: .6;
+transition: all .4s linear;
+}
+.openNav .mobile_menu span {
+background: #fff;opacity: 1;
 }
 .mobile_menu {
   background: transparent;
@@ -983,6 +986,9 @@ max-width: 100%;margin: 0px auto;padding:0px;
 }
 
 @media (max-width: 991px) {
+  .call_btn {
+  display: none !important;
+}
   .block-potential .block-potential_container {
   max-width: 100%;}
   .banner h1 {
@@ -1271,7 +1277,7 @@ margin: 0px auto;
 .product_item {
   width: 280px;}
   .banner h1 {
-  font-size: 50px;
+  font-size: 70px;
 }
 .sportsbook_content h3 {
   font-size: 20px;
@@ -1649,21 +1655,21 @@ background-size: cover;background-color: rgba(0, 0, 0, 0.3);
 .banner_other p ~ p {
   margin-bottom: 0;
 }
-.banner {
+/*.banner {
   margin-top: 114px;
 }
 .header {
   position: fixed;
   top: 0;
 }
-
+*/
 
 
 
 @media (max-width: 991px) {
-  .banner {
+  /*.banner {
   margin-top: 104px;
-}
+}*/
   .col-lg-3.col-md-4 {
   margin-bottom: 25px;
 }
