--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1666,14 +1666,29 @@ background-size: cover;background-color: rgba(0, 0, 0, 0.3);
   position: fixed;
   top: 0;
 }
-.header_nav_menu li.dropdown_menu .sub-menu li {
-  margin-bottom: 10px;
-}
-.header_nav_menu li.dropdown_menu .sub-menu {
-  padding-top: 10px;
-}
 
 
+
+
+
+@media (min-width: 992px) {
+  .sub-menu {
+  padding: 0;
+}
+.header_nav_menu li.dropdown_menu .sub-menu li a {
+  padding: 8px 19px;
+}
+.header_nav_menu li.dropdown_menu .sub-menu li a {
+  padding: 8px 19px;
+}
+.header_nav_menu li.dropdown_menu .sub-menu li:first-child a {
+  padding-top: 16px;
+}
+.header_nav_menu li.dropdown_menu .sub-menu li:last-child a {
+  padding-bottom: 16px;
+}
+
+}
 
 
 @media (max-width: 991px) {
