--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -587,7 +587,7 @@ background: #fff;opacity: 1;
   height: 40px;
   position: fixed;
   z-index: 9999999;
-  right: -88px;
+  right: -102px;
 top: 50%;
   font-size: 16px;
   font-weight: 400;
@@ -1665,6 +1665,30 @@ background-size: cover;background-color: rgba(0, 0, 0, 0.3);
 .header {
   position: fixed;
   top: 0;
+}
+.right_modal {
+  overflow: inherit;
+}
+
+.chat_btn i {
+  animation: queryan 3s infinite;
+  transition: .5s;
+}
+
+@keyframes queryan {
+  0% {
+  color: #fff;
+}
+70% {
+  color: #c6c6c6;
+}
+100% {
+  color: #fcd10a;
+}
+}
+.fade {
+  background: transparent !important;
+opacity: 1 !important;
 }
 
 
