--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,8 @@
   url('web-font/montserrat/Montserrat-SemiBold.ttf'), url('web-font/montserrat/Montserrat-Thin.ttf');
   font-display:swap;
 }
-
+.modal-open {overflow: scroll !important;
+padding-right: 0px !important;}
 body {
   font-family: 'Montserrat', sans-serif;
   color: #484848;
@@ -953,7 +954,12 @@ max-width: 1500px;margin: 0px auto;padding: 0 20px;
 
 /* ===================Responsive==================== */
 
-
+@media (min-width: 992px) {
+  #sendusyourinquiry {
+    overflow: hidden;padding-right: 0 !important;
+    padding-bottom: 70px;
+  }
+}
 @media only screen and (max-width: 1366px) {
   .container {
   width: 1220px !important;
