--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -608,13 +608,13 @@ top: 50%;
   width: 40px;
   height: 40px;
   position: fixed;
-  right: 0;
+  right: 11px;
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
   text-decoration: none;
-  bottom: 10px;
+  bottom: 85px;
   z-index: 99;
 }
 .fa.fa-phone-alt::before {
