--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -959,13 +959,18 @@ max-width: 1500px;margin: 0px auto;padding: 0 20px;
   width: 100% !important;
 }
 .whatsapp_chat.chat_btn_dsk {
-  width: 69px !important;
-  height: 44px !important;
-  font-size: 30px;
-  box-shadow: 0 12px 14px 8px rgba(0,0,0,.17);
-  padding-right: 23px;
-  border-radius: 25px;
-  right: -25px;
+  width: 51px !important;
+height: 44px !important;
+font-size: 30px;
+box-shadow: 0 12px 14px 8px rgba(0,0,0,.17);
+padding-right: 5px;
+border-radius: 25px;
+right: 0;
+border-radius: 25px 0 0 25px;
+}
+.whatsapp_chat.chat_btn_dsk i {
+  position: relative;
+  left: 3px;
 }
 
 
